# biome-anonymize

./: README.md  anonymize.py  setup.cfg  setup.py
examples/: Example.ipynb  dataprep.ipynb
src/: anonymize.py
src/anonymize/: __init__.py  anonymize.py
tests/: test_anonymize.py
