[metadata]
name = anonymizer_recognai
# description = ...
# long_description = ...
# keywords = ...
# license = ...

[options]
package_dir =
  =src
packages = find:
python_requires = >=3.6
install_requires =
  presidio-analyzer==2.0.1,
  presidio-anonymizer==2.0.1,
  pandas~=1.1.5

[options.packages.find]
where = src