[metadata]
name = biome_anonymize
# description = ...
# long_description = ...
# keywords = ...
# license = ...

[options]
package_dir =
  =src
packages = find:
python_requires = >=3.6
install_requires =
  presidio-analyzer ~= 2.2.0
  presidio-anonymizer ~= 2.2.0
  pandas >= 1.0.0, < 2.0.0

[options.packages.find]
where = src
